# aoc-2022-prolog

./: #day-1-elf-packs.rkt#2#  .gitignore  day-1-elf-packs.pl  day-1-elf-packs.py  day-1-elf-packs.rkt  pyproject.toml
